refreshing with actual projects

--- a/index.html
+++ b/index.html
@@ -23,25 +23,52 @@
         <h2>Projects</h2>
         <main>
             <article>
-                <a href= "https://krestle80.github.io/01-homework-refactoring-horiseon/" class="refact_pic_holder" target="blank">               
-                    <img  src="assets\images\refactoring_project.png" alt="refactored Website"  id="refactoring_image" title = "This projects task was to refactor a website to make it functional while looking the same" />
+                <a href= "https://rsundquist.github.io/event-finder/" class="topPicHolder" target="blank">               
+                    <img  src="assets\images\EventFinder.png" alt="site picture"  id="topPic" title = "This projects task was to refactor a website to make it functional while looking the same" />
+                    <div class = 'descriptionTop'>
+                        <h2 class= "title">Event Finder</h2>
+                        <p id = "descriptionTop"> This project's goal was to create an app that could find local events and display them to the user</p>
+                    </div>
                 </a>
             </article>
-            <article  class = "project_img"> 
-                <img src="assets\images\pexels-kindel-media-7054756_calculator_fill.jpg" alt="calculator" class = "image" title = "filler" />
-                <img src="assets\images\pexels-pixabay-261857_text_editor_filler.jpg" alt="text"  class = "image" title = "filler" />
-                <img src="assets\images\pexels-artem-beliaikin-2447042_online-store.jpg" alt="store" class = "image" title = "filler" />
+            <article  class = "projectImg"> 
+                <a href = 'https://krestle80.github.io/01-homework-refactoring-horiseon/' class = "imagesHolder" target="blank">
+                    <img src="assets\images\refactoring_project.png" alt="site picture" class = "image" title = "filler" />
+                    <div class = 'description '>
+                        <h2 class= "title">Refactoring Project</h2>
+                        <p> This project's goal was to optomize an </p>
+                        <p>already existing app </p>
+                    </div>
+                </a>
+                <a href = "https://krestle80.github.io/password_generator/" class = "imagesHolder" target="blank">
+                    <img src="assets\images\password_generator_pic.png" alt="site picture"  class = "image" title = "filler" />
+                    <div class = 'description'>
+                        <h2 class= "title">Password Generator</h2>
+                        <p> This project's goal was to create a password generator</p>
+                        <p>that lets the user pick how long their password will be</p>
+                    </div>
+                </a>
+                <a href = 'https://krestle80.github.io/day_planner/' class = "imagesHolder" target="blank">
+                <img src="assets\images\day_planner_pic.png" alt="site picture" class = "image" title = "filler" />
+                    <div class = 'description bottomFix'>
+                        <h2 class= "title">Day Planner</h2>
+                        <p> This project's goal was to create a day-planner</p>
+                        <p> </p>
+                    </div>
+                </a>
             </article>
         </main>
     </section>
     <!-- About me -->
-    <section>
+    <section >
         <h2 id = "about_me">About Me</h2>
         <a class = "stickman">
             <img src="assets\images\stickman.jpg" alt= "incredibly well drawm man" id = "stickman"  />
         </a>
-        <h3 class = "bioheader"> Bio </h3>
-        <h3> I am Currently training to be a full stack devloper. These are some of my projects and some contact info.  <h3>
+        <article class = " bioholder">
+        <h4 class = "bioheader"> Bio </h4>
+        <h3>I am Currently training to be a full stack devloper. These are some of my projects and some contact info.</h3>
+        </article>
     </section>
     <section>
         <h2>Contact Me</h2>
