--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/reset.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Full Stack Portfolio</title>
 </head>
-<body>
+<body class = "bg-secondary opacity-75">
     <header class = "header"> 
         <h1>Kyle Costello's Portfolio</h1>
         <nav>
@@ -56,18 +56,36 @@
                         <p> </p>
                     </div>
                 </a>
+                <a href = "https://github.com/Krestle80/readMeMaker" class = "imagesHolder" target="blank">
+                    <img src="assets\images\readMeProject.png" alt="site picture"  class = "image" title = "filler" />
+                    <div class = 'description d-flex flex-wrap'>
+                        <h2 class= "title">Read me Generator</h2>
+                        <p class = "text-wrap"> This project's goal was to create a read.me generator that lets </p><p>the user make a read me by inputing into the terminal</p>
+                    </div>
+                </a>
+                <a href = "https://web-dev-group-finder.herokuapp.com/signUp" class = "imagesHolder" target="blank">
+                    <img src="assets\images\webDevGroupFinder.png" alt="site picture"  class = "image" title = "filler" />
+                    <div class = 'description'>
+                        <h2 class= "title">Web Dev Group Finder</h2>
+                        <p> This project's goal was to create a social network</p>
+                        <p>for developers, allowing them to work on specific skills</p>
+                    </div>
+                </a>
+                <a href = "https://note-taker80.herokuapp.com/" class = "imagesHolder" target="blank">
+                    <img src="assets\images\noteTaker.png" alt="site picture"  class = "image" title = "filler" />
+                    <div class = 'description'>
+                        <h2 class= "title">Note Taker</h2>
+                        <p> This project's goal was to create an app to take and</p>
+                        <p>update notes created by the user</p>
+                    </div>
+                </a>
             </article>
         </main>
     </section>
     <!-- About me -->
-    <section >
-        <h2 id = "about_me">About Me</h2>
-        <a class = "stickman">
-            <img src="assets\images\stickman.jpg" alt= "incredibly well drawm man" id = "stickman"  />
-        </a>
-        <article class = " bioholder">
-        <h4 class = "bioheader"> Bio </h4>
-        <h3>I am Currently training to be a full stack devloper. These are some of my projects and some contact info.</h3>
+    <section class ="d-flex flex-column align-items-center text-dark" >
+        <h4 class = "bioheader text-dark"> Bio </h4>
+        <h3 class = "text-dark">I am Currently training to be a full stack devloper. These are some of my projects and some contact info.</h3>
         </article>
     </section>
     <section>
